--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+<body bgcolor="#E6E6FA">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Kenny Arnold</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+        </style>
 </head>
+
 <body>
-<h1>Kenny Arnold profile page</h1>
+<h1> This is a website about me!!!</h1>
+<br>
+<img src="https://s32.postimg.org/5hq12ky2d/12814069_10153438973252919_5439993175255901463_n.jpg" alt="Profile Pic" style="width:304px;height:228px;" align = "right">
+<br>
+<p><font face="verdana" color="green"><center>Kenny Arnold.</center></font></p>
+<br>
+<br>
+<img src="https://s31.postimg.org/rlwxkl9ij/button.png" alt="Profile Pic" style="width:100px;height:50px;" align = "right">
+<img src="https://s32.postimg.org/yvxphqok5/button_1.png" alt="Profile Pic" style="width:100px;height:50px;" align = "right">
+<img src="https://s31.postimg.org/3t4bn5svv/button_2.png" alt="Profile Pic" style="width:100px;height:50px;" align = "right">
+<br>
+<p>I am just about to start 3rd year at RGU University in Aberdeen. For the past two years I have attended NesCol</p>
+<p> doing a 2+2 course as part of my Degree in Software Development. I have lived in Aberdeen for 8 years.</p>
+<p> I am looking forward to attending University in September to increase my knowledge on all things Software development</p>
+<p> If you click on the links to the right of the page you will be taken to my Bio/C.V or my Portfolio. All of which are a work in progress.</p>
+<center><h1> I will update this page as and when situations change. </h1></center>
+
+
 </body>
 </html>
